html fini debut css

--- a/index.html
+++ b/index.html
@@ -4,25 +4,28 @@
        <meta charset="UTF-8"/>
        <meta name="viewport" content="width=device-width ,initial-scale=1.0"/>
        <meta name="author" content="Donia Belgherbi"/>
-       <title>Mon Portfolio </title>
+       <title>BELGHERBI Donia</title>
        <link rel="stylesheet" type = "text/css" href="./styles/principal.css"/>
+       <script src="./js/portfoliojs.js" defer></script>
+       <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Merriweather&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>
-            <h1> Portefeuille de compétences</h1>
-            <h1> BELGHERBI Donia</h1>    
+            <h3> Portefeuille de compétences</h3>
+            <h3> BELGHERBI Donia</h3>    
             <nav class ="sommaire">
                 <ul>
-                    <li><a href ="#about">À propos</a></li></button>
-                    <li><a href ="#skills">Compétences</a></li></button>
-                    <li><a href ="#projects">Projets</a></li></button>
-                    <li><a href ="#contact">Contact</a></li></button>
+                    <li><a href ="#about">À propos</a></li>
+                    <li><a href ="#skills">Compétences</a></li>
+                    <li><a href ="#projects">Projets</a></li>
+                    <li><a href ="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
 
         <section id="about">
-            <h2>À propos</h2>
+            <h3>À propos de moi</h3>
             <p>Hello world,<br>
                 et bienvenue sur mon portfolio.<br>
                 Je suis BELGHERBI Donia, étudiante en troisième année de licence informatique et actuellement à la recherche d'un stage de fin d'études.<br>
@@ -36,32 +39,34 @@
                 – Donia<br>
             </p>
         </section>
+        
         <section id="skills">
-            <h2>competences</h2>
+            <h3>Competences</h3>
             <p>Listes des languages que je connais et que j'utilise, les logiciels et les outils</p>    
             <h3>Front-end</h3>
             <p>HTML5, CSS3, JavaScript, React.js</p>
             <h3>Back-end</h3>
             <p>Node.js, Python (Flask / Django), PHP (base), MySQL / PostgreSQL, Git / GitHub</p>
-            <p>parcours </p>
-            <p>ce que je cherche  </p>
         </section>
+
         <section id="projects">
-            <p>Mes projets </p>
+            <p>Mes projets</p>
             <script src="../portolio/TicTacToe/tic tac toe(fini).py"></script>
             <script src="../portolio/jeu421/jeu_421.py"></script>
             <script src="../portolio/ProjetCalbuthPASFini/fonction_couleurs_finis.py"></script>
         </section>
-        <section class="CV">Mon CV </section>
 
         <section id="contact">
-            <h2>Me contacter</h2>
-            <a href="mailto:belgherbid07@gmail.com">Adresse mail</a>
-            <a href="https://github.com/dssblg" target="_blank">GitHub</a>
-            <a href="../portolio/BELGHERBI Donia.pdf" target="_blank">CV</a>
-            <p>pour découvrir mes projets.</p>
-            <a href="https://wa.me/33605550936" target="_blank">Whatsapp</a>
-            <p class = "formulairecontact">formaulaire de contact</p>
+            <h3>Me contacter</h3>
+            <a href="mailto:belgherbid07@gmail.com">Adresse mail : </a>
+            <a href="https://github.com/dssblg" target="_blank">Accéder à mon GitHub : </a>
+            <a href="../portolio/BELGHERBI Donia.pdf" target="_blank">Télécharger mon CV : </a>
+            <a href="https://wa.me/33605550936" target="_blank">Whatsapp : </a>
+            <p class = "formulairecontact">Formulaire de contact : </p>
         </section>
+
+        <footer> 
+            <p> &copy; 2025 Donia</p>
+        </footer>
     </body>
 </html>
